apps/base/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        
    spec:
      restartPolicy: Always

      nodeSelector:
        node-role.kubernetes.io/control-plane: "true"

      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.17.2952-ls311

        ports:
        - containerPort: 8989
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /media/tv

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config-pvc
      - name: tv
        persistentVolumeClaim:
          claimName: media-shared-pvc
