apps/base/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: sonarr.mkped.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-svc
                port:
                  number: 8989
  tls:
  - secretName: sonarr-certificate-secret
